--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
       color: red;
     }
   </style>
-  <head></head>
+  <head>
+    <title>
+      Markdown Blob
+    </title>
+  </head>
   <body></body>
 </html>
